# hasgel

./: .gitignore  Design.md  LICENSE  Main.hs  README.md  hasgel.cabal  learning.cabal  stack.yaml
hasgel-model/: LICENSE  README.md  hasgel-model.cabal
hasgel-model/app/: ObjToHmd.hs
hasgel-model/src/Hasgel/: Mesh.hs
hasgel-model/src/Hasgel/Mesh/: OBJ.hs
hasgel-model/src/Hasgel/Mesh/Test/: BenchOBJ.hs
models/: player-ship.hmd
shaders/: axis.frag  axis.geom  axis.vert  basic.frag  basic.vert  billboard.frag  billboard.geom  billboard.vert  explode.geom  gamma.frag  gouraud.frag  gouraud.vert  normals.geom  pass.vert  text.frag  texture.frag
share/models/: plane.hmd  player-ship.hmd
src/: Main.hs  ObjToHmd.hs
src/Hasgel/: Args.hs  Configuration.hs  Display.hs  Drawable.hs  FrameTimer.hs  GL.hs  Game.hs  Input.hs  Mesh.hs  Rendering.hs  Resources.hs  SDL.hs  Simulation.hs  Transform.hs  World.hs
src/Hasgel/GL/: Attribute.hs  Buffer.hs  Framebuffer.hs  Object.hs  Param.hs  Program.hs  Shader.hs  Uniform.hs
src/Hasgel/Game/: Movement.hs
src/Hasgel/Game/Test/: TestMovement.hs
src/Hasgel/Mesh/: OBJ.hs
src/Hasgel/Mesh/Test/: BenchOBJ.hs
src/Hasgel/SDL/: Basic.hs  BitFlag.hs  Events.hs  Video.hs
src/Hasgel/Test/: TestSimulation.hs
