name: hasgel
version: 0.1
synopsis: My experiments with OpenGL and Haskell
description:
  In this project I am implementig various Computer Graphics techniques
  while learning Haskell along with OpenGL and SDL 2.0 APIs.
license: MIT
license-file: LICENSE
author: Teon Banek
maintainer: theongugl@gmail.com
category: Graphics
build-type: Simple
cabal-version: >= 1.10
tested-with: GHC == 7.10.1

data-files:
  shaders/*.vert,
  shaders/*.frag

executable hasgel
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
      attoparsec >= 0.13
    , base >= 4.8
    , containers >= 0.5
    , directory >= 1.2
    , gl >= 0.7
    , lens >= 4.13
    , lifted-base >= 0.2
    , linear >= 1.20
    , monad-control >= 1.0
    , mtl >= 2.2
    , sdl2 >= 2.1
    , time >= 1.5
    , transformers >= 0.3
    , transformers-base >= 0.4
    , binary >= 0.7
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs -rtsopts -O2
  ghc-prof-options: -fprof-auto

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs -O2
  exposed-modules:
    Hasgel.Transform
    Hasgel.Simulation
    Hasgel.Mesh
    Hasgel.Mesh.OBJ
    Hasgel.Game.Movement
  build-depends:
      attoparsec >= 0.13
    , base >= 4.8
    , containers >= 0.5
    , directory >= 1.2
    , gl >= 0.7
    , lens >= 4.13
    , lifted-base >= 0.2
    , linear >= 1.20
    , monad-control >= 1.0
    , mtl >= 2.2
    , sdl2 >= 2.1
    , time >= 1.5
    , transformers >= 0.3
    , transformers-base >= 0.4
    , binary >= 0.7

executable obj2hmd
  main-is: ObjToHmd.hs
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs -rtsopts -O2
  ghc-prof-options: -fprof-auto
  build-depends:
      base >= 4.8
    , attoparsec >= 0.13
    , linear >= 1.20
    , binary

test-suite test-game-movement
  type: exitcode-stdio-1.0
  main-is: Hasgel/Game/Test/TestMovement.hs
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs
  build-depends:
      base >= 4.8
    , hspec
    , hasgel
    , linear >= 1.20
    , lens >= 4.13

test-suite test-simulation
  type: exitcode-stdio-1.0
  main-is: Hasgel/Test/TestSimulation.hs
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs
  build-depends:
      base >= 4.8
    , hspec
    , hasgel

benchmark bench-obj
  type: exitcode-stdio-1.0
  main-is: Hasgel/Mesh/Test/BenchOBJ.hs
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs -O2 -rtsopts
  build-depends:
      base >= 4.8
    , hasgel
    , criterion
    , deepseq
    , linear >= 1.20
    , attoparsec >= 0.13
    , binary >= 0.7