name: hasgel
version: 0.1
synopsis: My experiments with OpenGL and Haskell
description:
  In this project I am implementig various Computer Graphics techniques
  while learning Haskell along with OpenGL and SDL 2.0 APIs.
license: MIT
license-file: LICENSE
author: Teon Banek
maintainer: theongugl@gmail.com
category: Graphics
build-type: Simple
cabal-version: >= 1.10
tested-with: GHC == 7.10.1

data-files:
  shaders/*.vert,
  shaders/*.frag

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs -O2
  exposed-modules:
    Hasgel.Args
    Hasgel.Display
    Hasgel.Drawable
    Hasgel.FrameTimer
    Hasgel.Game
    Hasgel.Game.Movement
    Hasgel.GL
    Hasgel.GL.Attribute
    Hasgel.GL.Buffer
    Hasgel.GL.Framebuffer
    Hasgel.GL.Object
    Hasgel.GL.Param
    Hasgel.GL.Program
    Hasgel.GL.Shader
    Hasgel.GL.Uniform
    Hasgel.Input
    Hasgel.Rendering
    Hasgel.Resources
    Hasgel.Simulation
    Hasgel.Transform
    Hasgel.World
  build-depends:
      hasgel-model
    , base >= 4.8 && < 5.0
    , containers >= 0.5
    , directory >= 1.2
    , gl >= 0.7
    , lens >= 4.13
    , lifted-base >= 0.2
    , linear >= 1.20
    , monad-control >= 1.0
    , mtl >= 2.2
    , sdl2 >= 2.1
    , time >= 1.5
    , transformers >= 0.3
    , transformers-base >= 0.4
    , binary >= 0.7
    , random >= 1.1
    , bytestring >= 0.10

test-suite test-game-movement
  type: exitcode-stdio-1.0
  main-is: Hasgel/Game/Test/TestMovement.hs
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs
  build-depends:
      hspec
    , hasgel
    , base >= 4.8 && < 5.0
    , linear >= 1.20
    , lens >= 4.13

test-suite test-simulation
  type: exitcode-stdio-1.0
  main-is: Hasgel/Test/TestSimulation.hs
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs
  build-depends:
      hspec
    , hasgel
    , base >= 4.8 && < 5.0

executable hasgel
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      hasgel
    , base >= 4.8 && < 5.0
    , containers >= 0.5
    , gl >= 0.7
    , lens >= 4.13
    , linear >= 1.20
    , monad-control >= 1.0
    , mtl >= 2.2
    , sdl2 >= 2.1
    , binary >= 0.7
    , random >= 1.1
    , bytestring >= 0.10
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs -rtsopts -O2
  ghc-prof-options: -fprof-auto

