name: learning
version: 0.1
synopsis: My experiments with OpenGL and Haskell
description:
  In this project I am implementig various Computer Graphics techniques
  while learning Haskell along with OpenGL and SDL 2.0 APIs.
author: Teon Banek
cabal-version: >= 1.10
tested-with: GHC
build-type: Simple

executable "learning"
  build-depends:
    sdl2 == 1.1.*,
    base >= 4 && < 5
  default-language: Haskell2010
  main-is: Main.hs
  ghc-options: -Wall -fwarn-tabs
