name: hasgel-model
version: 0.1
synopsis: Model loading for hasgel
description:
  Provides the model data type for hasgel. The package also provides an
  executable for converting a subset of Wavefront OBJ format to HMD.
license: MIT
license-file: LICENSE
author: Teon Banek
maintainer: theongugl@gmail.com
category: Graphics
build-type: Simple
cabal-version: >= 1.10
tested-with: GHC == 7.10.1

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs -O2
  exposed-modules:
    Hasgel.Mesh
    Hasgel.Mesh.OBJ
  build-depends:
      base >= 4.8
    , attoparsec >= 0.13
    , linear >= 1.20
    , binary >= 0.7
    , deepseq >= 1.4
    , array >= 0.5
    , containers >= 0.5

executable obj2hmd
  main-is: ObjToHmd.hs
  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs -rtsopts -O2
  ghc-prof-options: -fprof-auto
  build-depends:
      base >= 4.8
    , hasgel-model
    , binary >= 0.7

benchmark bench-obj
  type: exitcode-stdio-1.0
  main-is: Hasgel/Mesh/Test/BenchOBJ.hs
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs -O2 -rtsopts
  build-depends:
      hasgel-model
    , criterion
    , base >= 4.8
    , attoparsec >= 0.13
    , linear >= 1.20
    , binary >= 0.7
    , deepseq >= 1.4
    , array >= 0.5
    , containers >= 0.5
